fix: z-index

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ pre {
   position: absolute;
   top: 200px;
   left: 32px;
+  z-index: 10;
 }
 
 .link {
